# lib-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  publish.yml
go/: .golangci.yml  go.mod  go.sum
go/bridge/: compileBridges.sh  helpers.go  json-model.go  main.go  responses.go
go/internal/: client-interface.go  fake-client.go  real-client.go
go/internal/json-client/: client-interface.go  fake-client.go  real-client.go  request-map.go  requests-channels.go  requests-chats.go  requests-teams.go  teams-json-client.go
go/internal/json-client/decoders/: decode-chatRef.go  decode-messageBody.go  decode-msTeam.go  decode-params.go  decode-timeRange.go
go/internal/json-model/: json-model.go
python/: MANIFEST.in  pyproject.toml
python/teams_lib_pzsp2_z1/: client.py  config.py
python/teams_lib_pzsp2_z1/model/: chat.py  member.py  mention.py  message.py  team.py
python/teams_lib_pzsp2_z1/services/: base_service.py  channels.py  chats.py  teams.py
python/tests/: init_fake_client.py  test_channels.py  test_chats.py  test_teams.py
python/tests/fake_server/: data.py  setup.py
scripts/: setup-commit-msg-hook
teams_lib_pzsp2_z1/: client.py  config.py
teams_lib_pzsp2_z1/model/: channel.py  team.py
