[project]
name = "teams_lib_pzsp2_z1"
version = "0.1.4"
description = "Bridge to Go client for Teams API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pytest-httpserver>=1.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
show-fixes = true
src = ["teams_lib_pzsp2_z1"]
exclude = ["test_*.py", "tests/*"]


[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "C90", "B", "S", "UP", "PL"]

[tool.setuptools]
include-package-data = true
